--- a/src/Components/CONTACT/Contact.scss
+++ b/src/Components/CONTACT/Contact.scss
@@ -120,6 +120,7 @@
         background-color: #2ebb8e;
         transition: 0.3s ease;
         cursor: pointer;
+        box-shadow: 2px 2px 20px #2ebb8e;
       }
     }
   }
