--- a/src/Components/NAVBAR/Navbar.scss
+++ b/src/Components/NAVBAR/Navbar.scss
@@ -21,11 +21,13 @@
       border: none;
       font-size: 1em;
       font-weight: bold;
+      box-shadow: none;
     }
     button:hover {
       background-color: #2ebb8e;
       transition: 0.3s ease;
       cursor: pointer;
+      box-shadow: 2px 2px 20px #2ebb8e59;
     }
   }
 }
