--- a/src/Components/NAVBAR/Navbar.css
+++ b/src/Components/NAVBAR/Navbar.css
@@ -33,6 +33,8 @@
   border: none;
   font-size: 1em;
   font-weight: bold;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 .navbar-wrapper .nav-links button:hover {
@@ -40,5 +42,7 @@
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
   cursor: pointer;
+  -webkit-box-shadow: 2px 2px 20px #2ebb8e59;
+          box-shadow: 2px 2px 20px #2ebb8e59;
 }
 /*# sourceMappingURL=Navbar.css.map */
