--- a/src/Components/project-components/MAIN-PROJECT-DETAILS/MainProjectDetails.scss
+++ b/src/Components/project-components/MAIN-PROJECT-DETAILS/MainProjectDetails.scss
@@ -26,13 +26,12 @@
       justify-content: center;
       align-items: center;
       padding: 1em;
-      font-size: 1.25em;
+      font-size: 0.9em;
       background-color: transparent;
       color: white;
       font-weight: bold;
       padding: 2em;
       height: 100%;
-      line-height: 1.5em;
     }
     .title {
       grid-column: 4/10;
@@ -104,10 +103,12 @@
       align-items: center;
       background-color: transparent;
       box-shadow: none;
-      a, Link {
+      font-size: 0.85em;
+      a,
+      Link {
         width: 45%;
-          height: 50px;
-        
+        height: 50px;
+
         .project-detail-button {
           border: solid 2px white;
           border-radius: 25px;
@@ -140,6 +141,63 @@
     .w3 {
       grid-column: 1/4;
       grid-row: 3/5;
+    }
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .mainprojectsdetails-wrapper {
+    height: 100%;
+    .project-details-container {
+      height: auto;
+      grid-template-columns: repeat(12, 1fr);
+      grid-template-rows: repeat(7, 1fr);
+
+      .desc {
+        grid-column: 1/12;
+        grid-row: 3/4;
+      }
+      .title {
+        grid-column: 1/12;
+        grid-row: 1/2;
+      }
+      .git {
+        grid-column: 1/5;
+        grid-row: 2/3;
+      }
+      .vid {
+        grid-column: 1/12;
+        grid-row: 4/7;
+        display: flex;
+        justify-content: center;
+        overflow: hidden;
+        .project-details-image {
+          height: 100%;
+        }
+      }
+      .tech {
+        grid-column: 10/13;
+        grid-row: 2/3;
+        justify-content: center;
+        h1 {
+          margin: 0;
+          font-size: 1.25em;
+        }
+        .project-tech-list {
+          margin-left: 0;
+          font-size: 0.75em;
+        }
+      }
+      .project-detail-buttons {
+        grid-column: 5/9;
+        grid-row: 2/3;
+        flex-direction: column;
+
+        a,
+        Link {
+          width: 75%;
+        }
+      }
     }
   }
 }
