--- a/src/Components/PORTFOLIO/Portfolio.css
+++ b/src/Components/PORTFOLIO/Portfolio.css
@@ -84,8 +84,10 @@
 .portfolio-wrapper .project-wrapper .portfolio-project:hover {
   -webkit-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
-  -webkit-box-shadow: 2px 2px 10px rgba(255, 255, 255, 0.555);
-          box-shadow: 2px 2px 10px rgba(255, 255, 255, 0.555);
+  -webkit-box-shadow: 4px 4px 20px rgba(255, 255, 255, 0.555);
+          box-shadow: 4px 4px 20px rgba(255, 255, 255, 0.555);
+  -webkit-transform: scale(1.025);
+          transform: scale(1.025);
 }
 
 @media screen and (max-width: 800px) {
