--- a/src/Components/PORTFOLIO/Portfolio.scss
+++ b/src/Components/PORTFOLIO/Portfolio.scss
@@ -54,7 +54,8 @@
     }
     .portfolio-project:hover {
       transition: 0.3s ease-in-out;
-      box-shadow: 2px 2px 10px rgba(255, 255, 255, 0.555);
+      box-shadow: 4px 4px 20px rgba(255, 255, 255, 0.555);
+      transform: scale(1.025);
     }
   }
 }
